--- a/test.ipynb
+++ b/test.ipynb
@@ -22301,70 +22301,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1603it [10:26,  2.56it/s]\n",
-      "43it [02:42,  3.77s/it]\n",
-      "5it [00:01,  2.75it/s]\n",
-      "5it [00:01,  3.03it/s]\n",
-      "5it [00:01,  2.82it/s]\n",
-      "5it [00:01,  2.80it/s]\n",
-      "5it [00:01,  2.88it/s]\n",
-      "5it [00:01,  2.84it/s]\n",
-      "5it [00:01,  2.98it/s]\n",
-      "5it [00:01,  2.88it/s]\n",
-      "5it [00:01,  2.93it/s]\n",
-      "5it [00:01,  2.92it/s]\n",
-      "5it [00:00,  5.70it/s]\n",
-      "5it [00:00,  5.32it/s]\n",
-      "5it [00:01,  4.97it/s]\n",
-      "5it [00:00,  5.07it/s]\n",
-      "5it [00:00,  5.13it/s]\n",
-      "5it [00:01,  2.78it/s]\n",
-      "5it [00:01,  2.63it/s]\n",
-      "5it [00:01,  2.92it/s]\n",
-      "5it [00:01,  2.89it/s]\n",
-      "5it [00:01,  2.92it/s]\n",
-      "5it [00:00,  5.89it/s]\n",
-      "5it [00:00,  5.86it/s]\n",
-      "5it [00:00,  6.00it/s]\n",
-      "5it [00:00,  5.88it/s]\n",
-      "5it [00:00,  5.99it/s]\n",
-      "5it [00:01,  2.83it/s]\n",
-      "5it [00:01,  3.15it/s]\n",
-      "5it [00:01,  3.14it/s]\n",
-      "5it [00:01,  2.81it/s]\n",
-      "5it [00:01,  2.84it/s]\n",
-      "5it [00:00,  5.68it/s]\n",
-      "5it [00:00,  5.81it/s]\n",
-      "5it [00:00, 10.54it/s]\n",
-      "5it [00:00, 10.75it/s]\n",
-      "5it [00:00, 10.33it/s]\n",
-      "5it [00:01,  4.82it/s]\n",
-      "5it [00:01,  4.94it/s]\n",
-      "5it [00:01,  4.87it/s]\n",
-      "5it [00:00,  5.21it/s]\n",
-      "5it [00:00,  5.17it/s]\n",
-      "5it [00:00, 10.22it/s]\n",
-      "5it [00:00,  9.57it/s]\n",
-      "5it [00:00,  9.18it/s]\n",
-      "5it [00:00,  9.90it/s]\n",
-      "5it [00:00, 10.06it/s]\n",
-      "5it [00:01,  4.80it/s]\n",
-      "5it [00:01,  4.63it/s]\n",
-      "5it [00:01,  4.95it/s]\n",
-      "5it [00:01,  4.80it/s]\n",
-      "5it [00:00,  5.10it/s]\n",
-      "5it [00:00,  5.07it/s]\n",
-      "5it [00:00,  5.07it/s]\n",
-      "5it [00:00,  5.38it/s]\n",
-      "5it [00:00,  5.03it/s]\n",
-      "5it [00:00,  5.07it/s]\n"
+      "3939it [07:52,  8.34it/s]\n",
+      "175it [04:04,  1.40s/it]\n",
+      "21it [00:02,  7.35it/s]\n",
+      "21it [00:03,  6.93it/s]\n",
+      "21it [00:02,  7.57it/s]\n",
+      "21it [00:02,  7.56it/s]\n",
+      "21it [00:02,  7.74it/s]\n",
+      "21it [00:02,  7.55it/s]\n",
+      "21it [00:02,  7.37it/s]\n",
+      "21it [00:02,  7.47it/s]\n",
+      "21it [00:02,  7.67it/s]\n",
+      "21it [00:02,  7.79it/s]\n",
+      "21it [00:01, 14.90it/s]\n",
+      "21it [00:01, 16.61it/s]\n",
+      "21it [00:01, 15.63it/s]\n",
+      "21it [00:01, 15.02it/s]\n",
+      "21it [00:01, 14.67it/s]\n",
+      "21it [00:02,  7.33it/s]\n",
+      "21it [00:02,  7.57it/s]\n",
+      "21it [00:02,  7.63it/s]\n",
+      "21it [00:02,  7.74it/s]\n",
+      "21it [00:02,  7.47it/s]\n",
+      "21it [00:01, 15.85it/s]\n",
+      "21it [00:01, 20.85it/s]\n",
+      "21it [00:01, 19.96it/s]\n",
+      "21it [00:01, 18.75it/s]\n",
+      "21it [00:01, 18.46it/s]\n",
+      "21it [00:02,  9.38it/s]\n",
+      "21it [00:02,  9.23it/s]\n",
+      "21it [00:02,  9.89it/s]\n",
+      "21it [00:02, 10.08it/s]\n",
+      "21it [00:02, 10.14it/s]\n",
+      "21it [00:01, 19.64it/s]\n",
+      "21it [00:00, 21.09it/s]\n",
+      "21it [00:01, 15.06it/s]\n",
+      "21it [00:01, 18.94it/s]\n",
+      "21it [00:01, 19.55it/s]\n",
+      "21it [00:02,  9.97it/s]\n",
+      "21it [00:02,  9.40it/s]\n",
+      "21it [00:01, 10.71it/s]\n",
+      "21it [00:01, 10.83it/s]\n",
+      "21it [00:01, 10.70it/s]\n",
+      "21it [00:00, 22.67it/s]\n",
+      "21it [00:00, 22.32it/s]\n",
+      "21it [00:00, 21.63it/s]\n",
+      "21it [00:00, 22.19it/s]\n",
+      "21it [00:00, 22.31it/s]\n",
+      "21it [00:01, 10.92it/s]\n",
+      "21it [00:02,  8.50it/s]\n",
+      "21it [00:02,  8.28it/s]\n",
+      "21it [00:02,  8.04it/s]\n",
+      "21it [00:02,  9.12it/s]\n",
+      "21it [00:01, 10.66it/s]\n",
+      "21it [00:02, 10.48it/s]\n",
+      "21it [00:01, 11.05it/s]\n",
+      "21it [00:02, 10.05it/s]\n",
+      "21it [00:02, 10.42it/s]\n"
      ]
     }
    ],
@@ -22412,7 +22412,7 @@
     "\n",
     "# n_fold should be equal to the number of fold which has been used to derive the strategies\n",
     "# if there are no folds, just set it to 0\n",
-    "n_fold = 3\n",
+    "n_fold = 4\n",
     "\n",
     "# start_fold should be set to the number of fold starting from which the folds of data are not used during strategy generation\n",
     "# end_fold is the last fold not used for strategy generation\n",
@@ -22446,6 +22446,305 @@
     "portfolio_testing.filter_save_lstr(data_path, n_fold=n_fold, str_file_path=selected_str_file_path, logger=logger,\n",
     "    lstr_path=lstr_path, lstr_file_name=lstr_file_name, is_subset=False, start_subset=256, end_subset=260,\n",
     "    entry_testing_threshold=50, exit_testing_threshold=50, core_testing_threshold=70,\n",
+    "    prob_threshold=prob_threshold, n_bars=n_bars, n_total_folds=n_total_folds, is_counter_trend_exit=False, \n",
+    "    is_random_exit=False, entry_exit_on=False\n",
+    ")\n",
+    "\n",
+    "# creating portfolio weights using prob\n",
+    "portfolio_testing.creating_port_weights(lstr_path, logger, port_path=port_path, \n",
+    "    port_file_name=file_name, is_prob=False, prob_threshold=prob_threshold\n",
+    ")\n",
+    "\n",
+    "# calculating out of sample (some folds that are not touched during strategy derivation) performance of the portfolio derived above\n",
+    "portfolio_testing.calculate_port_out_sample_perf(\n",
+    "    data_path, port_file_path, logger, n_bars=n_bars, \n",
+    "    initial_amount=initial_amount, start_fold=start_fold, end_fold=end_fold, \n",
+    "    port_perf_path=port_perf_path,\n",
+    "    port_perf_file_name=file_name\n",
+    ")\n",
+    "\n",
+    "# creating portfolio weights using prob and setting threshold for prob\n",
+    "portfolio_testing.creating_port_weights(lstr_path, logger, port_path=port_path, \n",
+    "    port_file_name=file_name, is_prob=True, prob_threshold=prob_threshold\n",
+    ")\n",
+    "\n",
+    "# calculating out of sample (some folds that are not touched during strategy derivation) performance of the portfolio derived above\n",
+    "portfolio_testing.calculate_port_out_sample_perf(\n",
+    "    data_path, port_file_path, logger, n_bars=n_bars, \n",
+    "    initial_amount=initial_amount, start_fold=start_fold, end_fold=end_fold, \n",
+    "    port_perf_path=port_perf_path,\n",
+    "    port_perf_file_name=f'{file_name}_prob'\n",
+    ")\n",
+    "\n",
+    "# creating portfolio weights by maximizing Sortino ratio\n",
+    "portfolio_testing.creating_port_weights_mvp(\n",
+    "    lstr_path, data_path, port_path=port_path, port_file_name=file_name.replace('_baseline', ''),\n",
+    "    is_min_variance_port=False, is_sharpe_port=False, is_sortino_port=True, prob_threshold=prob_threshold,\n",
+    "    n_bars=n_bars, n_total_folds=n_total_folds, freq_minutes=time_freq\n",
+    ")\n",
+    "\n",
+    "# calculating out of sample (some folds that are not touched during strategy derivation) performance of the portfolio derived above\n",
+    "portfolio_testing.calculate_port_out_sample_perf(\n",
+    "    data_path, port_file_path=f\"{port_path}/{file_name.replace('_baseline', '')}_sortino.csv\", \n",
+    "    logger=logger, n_bars=n_bars, \n",
+    "    initial_amount=initial_amount, start_fold=start_fold, end_fold=end_fold, \n",
+    "    port_perf_path=port_perf_path,\n",
+    "    port_perf_file_name='sortino'\n",
+    ")\n",
+    "\n",
+    "# creating portfolio weights by maximizing Sharpe ratio\n",
+    "portfolio_testing.creating_port_weights_mvp(\n",
+    "    lstr_path, data_path, port_path=port_path, port_file_name=file_name.replace('_baseline', ''),\n",
+    "    is_min_variance_port=False, is_sharpe_port=True, is_sortino_port=False, prob_threshold=prob_threshold,\n",
+    "    n_bars=n_bars, n_total_folds=n_total_folds, freq_minutes=time_freq\n",
+    ")\n",
+    "\n",
+    "# calculating out of sample (some folds that are not touched during strategy derivation) performance of the portfolio derived above\n",
+    "portfolio_testing.calculate_port_out_sample_perf(\n",
+    "    data_path, port_file_path=f\"{port_path}/{file_name.replace('_baseline', '')}_sharpe.csv\", \n",
+    "    logger=logger, n_bars=n_bars, \n",
+    "    initial_amount=initial_amount, start_fold=start_fold, end_fold=end_fold, \n",
+    "    port_perf_path=port_perf_path,\n",
+    "    port_perf_file_name='sharpe'\n",
+    ")\n",
+    "\n",
+    "# creating portfolio weights by minimizing variance/risk\n",
+    "portfolio_testing.creating_port_weights_mvp(\n",
+    "    lstr_path, data_path, port_path=port_path, port_file_name=file_name.replace('_baseline', ''),\n",
+    "    is_min_variance_port=True, is_sharpe_port=False, is_sortino_port=False, prob_threshold=prob_threshold,\n",
+    "    n_bars=n_bars, n_total_folds=n_total_folds, freq_minutes=60)\n",
+    "\n",
+    "# calculating out of sample (some folds that are not touched during strategy derivation) performance of the portfolio derived above\n",
+    "portfolio_testing.calculate_port_out_sample_perf(\n",
+    "    data_path, port_file_path=f\"{port_path}/{file_name.replace('_baseline', '')}_mvp.csv\", \n",
+    "    logger=logger, n_bars=n_bars, \n",
+    "    initial_amount=initial_amount, start_fold=start_fold, end_fold=end_fold, \n",
+    "    port_perf_path=port_perf_path,\n",
+    "    port_perf_file_name='mvp'\n",
+    ")\n",
+    "\n",
+    "# creating portfolio weights using hierarchical risk parity\n",
+    "portfolio_testing.creating_port_weights_hrp(\n",
+    "    lstr_path, data_path, n_bars=n_bars, \n",
+    "    n_total_folds=n_total_folds, \n",
+    "    port_path=port_path, \n",
+    "    port_file_name=file_name.replace('_baseline', '_hrp'),\n",
+    "    is_prob=True, prob_threshold=prob_threshold\n",
+    ")\n",
+    "\n",
+    "# calculating out of sample (some folds that are not touched during strategy derivation) performance of the portfolio derived above\n",
+    "portfolio_testing.calculate_port_out_sample_perf(\n",
+    "    data_path, port_file_path=f\"{port_path}/{file_name.replace('_baseline', '')}_hrp.csv\", \n",
+    "    logger=logger, n_bars=n_bars, \n",
+    "    initial_amount=initial_amount, start_fold=start_fold, end_fold=end_fold, \n",
+    "    port_perf_path=port_perf_path,\n",
+    "    port_perf_file_name='hrp'\n",
+    ")\n",
+    "\n",
+    "# calculating out of sample (some folds that are not touched during strategy derivation) perfomance of all survived strategies\n",
+    "portfolio_testing.calculate_str_out_sample_perf(\n",
+    "    data_path, port_file_path, logger, n_bars=n_bars, \n",
+    "    initial_amount=initial_amount, start_fold=start_fold, end_fold=end_fold, \n",
+    "    str_perf_path=str_perf_path,\n",
+    "    str_perf_file_name='str_roi'\n",
+    ")\n",
+    "\n",
+    "# except Exception as e:\n",
+    "#     print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 33/33 [00:00<00:00, 409.96it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "main_path = Path(r'C:/\\Users/\\vchar/\\OneDrive/\\Desktop/\\ML Projects/\\Upwork/\\AlgoT_ML_Dev/\\GrammarEvolution/\\PonyGE2/\\src/\\mix_strategies')\n",
+    "\n",
+    "time_freq = '30min'\n",
+    "\n",
+    "file_list = os.listdir(main_path)\n",
+    "file_list = [i for i in file_list if time_freq in i]\n",
+    "\n",
+    "str_df = pd.DataFrame()\n",
+    "\n",
+    "for file in tqdm(file_list):\n",
+    "\n",
+    "    temp_df = pd.read_csv(os.path.join(main_path, file))\n",
+    "    str_df = pd.concat([str_df, temp_df], axis=0)\n",
+    "\n",
+    "str_df = str_df[~str_df.duplicated()]\n",
+    "str_df['strategy'] = [f'strategy{i+1}' for i in range(str_df.shape[0])]\n",
+    "str_df.to_csv(os.path.join(main_path, 'str_combined_30min.csv'), index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Strong Filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "250it [02:46,  1.50it/s]\n",
+      "107it [03:55,  2.20s/it]\n",
+      "107it [00:18,  5.86it/s]\n",
+      "107it [00:17,  6.00it/s]\n",
+      "107it [00:17,  6.02it/s]\n",
+      "107it [00:18,  5.76it/s]\n",
+      "107it [00:22,  4.80it/s]\n",
+      "107it [00:30,  3.50it/s]\n",
+      "107it [00:30,  3.52it/s]\n",
+      "107it [00:30,  3.52it/s]\n",
+      "107it [00:29,  3.58it/s]\n",
+      "107it [00:30,  3.50it/s]\n",
+      "107it [00:15,  6.97it/s]\n",
+      "107it [00:18,  5.78it/s]\n",
+      "107it [00:16,  6.36it/s]\n",
+      "107it [00:16,  6.36it/s]\n",
+      "107it [00:15,  6.74it/s]\n",
+      "107it [00:21,  4.92it/s]\n",
+      "107it [00:31,  3.41it/s]\n",
+      "107it [00:31,  3.40it/s]\n",
+      "107it [00:29,  3.58it/s]\n",
+      "107it [00:30,  3.47it/s]\n",
+      "107it [00:15,  6.98it/s]\n",
+      "107it [00:17,  5.96it/s]\n",
+      "107it [00:17,  6.14it/s]\n",
+      "107it [00:16,  6.38it/s]\n",
+      "107it [00:17,  6.29it/s]\n",
+      "107it [00:30,  3.56it/s]\n",
+      "107it [00:30,  3.49it/s]\n",
+      "107it [00:30,  3.55it/s]\n",
+      "107it [00:31,  3.44it/s]\n",
+      "107it [00:30,  3.51it/s]\n",
+      "107it [00:15,  6.84it/s]\n",
+      "107it [00:17,  6.06it/s]\n",
+      "107it [00:17,  5.96it/s]\n",
+      "107it [00:17,  6.18it/s]\n",
+      "107it [00:17,  5.98it/s]\n",
+      "107it [00:31,  3.42it/s]\n",
+      "107it [00:30,  3.49it/s]\n",
+      "107it [00:31,  3.40it/s]\n",
+      "107it [00:31,  3.43it/s]\n",
+      "107it [00:30,  3.54it/s]\n",
+      "107it [00:15,  7.01it/s]\n",
+      "107it [00:15,  6.77it/s]\n",
+      "107it [00:15,  6.98it/s]\n",
+      "107it [00:15,  6.73it/s]\n",
+      "107it [00:15,  7.06it/s]\n",
+      "107it [00:31,  3.38it/s]\n",
+      "107it [00:31,  3.41it/s]\n",
+      "107it [00:30,  3.49it/s]\n",
+      "107it [00:31,  3.37it/s]\n",
+      "107it [00:31,  3.42it/s]\n",
+      "107it [00:31,  3.44it/s]\n",
+      "107it [00:31,  3.40it/s]\n",
+      "107it [00:30,  3.46it/s]\n",
+      "107it [00:31,  3.43it/s]\n",
+      "107it [00:31,  3.44it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "cur_dir = os.getcwd()\n",
+    "os.chdir(Path(r'C:/\\Users/\\vchar/\\OneDrive/\\Desktop/\\ML Projects/\\Upwork/\\AlgoT_ML_Dev/\\GrammarEvolution/\\PonyGE2/\\src'))\n",
+    "\n",
+    "from fitness.performance import filter_strategies, portfolio_testing\n",
+    "from fitness.custom_logger.load_logger import create_file_logger\n",
+    "\n",
+    "# set the path to the training data, used to get strategies, below\n",
+    "data_path = Path(r'C:/\\Users/\\vchar/\\OneDrive/\\Desktop/\\ML Projects/\\Upwork/\\AlgoT_ML_Dev/\\GrammarEvolution/\\PonyGE2/\\data_30min.csv')\n",
+    "\n",
+    "# set the path to the csv file containing the strategies generated\n",
+    "strategy_file_path = Path(r\"C:/\\Users/\\vchar/\\Downloads/\\ge_results.csv\")\n",
+    "\n",
+    "stats_path = 'testing_results' # folder which will contain csv files with testing stats as in testing_strategies.ipynb\n",
+    "file_name = 'fold1_baseline' # suffix which will be added to some csv files created during this run\n",
+    "str_path = 'selected_strategies' # folder which will contain csv files with strategies survived after testing\n",
+    "selected_str_file_path = f'{str_path}/selected_strategies_{file_name}.csv' # file path which will contain the survived strategies\n",
+    "lstr_path = 'live_strategies' # folder which will contain csv files with strategies survived after out of fold/sample testing\n",
+    "lstr_file_name='fold1_baseline' # suffix which will be added to the csv files containing the strategies survived after out of fold/sample teting\n",
+    "port_path = 'portfolio_strategies' # folder which will contain csv files with the portfolio weights of the survived strategies\n",
+    "port_file_path = f'{port_path}/portfolio_{file_name}.csv' # path to a file containing the portfolio weigths of the survived strategies\n",
+    "port_perf_path = 'portfolio_out_sample_performance' # folder which will contain csv files with the performance (ROI (%), PNL) of the portfolio for different out of fold/sample data\n",
+    "str_perf_path='str_out_sample_performance' # folder which will contain csv files with the performance (ROI (%)) of the survived strategies for different out of fold/sample data\n",
+    "\n",
+    "# try:\n",
+    "# initialize the log file   \n",
+    "logger = create_file_logger(filename=f'{file_name}')\n",
+    "\n",
+    "# set the time frequency in minutes\n",
+    "time_freq = 30\n",
+    "\n",
+    "# calculate the number of bars per 5 weeks\n",
+    "# n_bars = int(7 * 24 * 60 * 5 / time_freq)\n",
+    "# n_bars = int(7 * 24 * 60 * 40 / time_freq)\n",
+    "n_bars = int(7 * 24 * 60 * 10 / time_freq)\n",
+    "\n",
+    "# set the number of available folds\n",
+    "n_total_folds = 5\n",
+    "\n",
+    "# n_fold should be equal to the number of fold which has been used to derive the strategies\n",
+    "# if there are no folds, just set it to 0\n",
+    "n_fold = 0\n",
+    "\n",
+    "# start_fold should be set to the number of fold starting from which the folds of data are not used during strategy generation\n",
+    "# end_fold is the last fold not used for strategy generation\n",
+    "start_fold = 1\n",
+    "end_fold = 5\n",
+    "\n",
+    "# setting winning probability threshold \n",
+    "prob_threshold = 0.98\n",
+    "\n",
+    "# setting investment amount\n",
+    "initial_capital = 700000\n",
+    "trade_size = 0.5\n",
+    "initial_amount = initial_capital * trade_size\n",
+    "\n",
+    "# acquiring the stats for the generated strategies\n",
+    "filter_strategies.save_stats(\n",
+    "    data_path=data_path, strategy_file_path=strategy_file_path, \n",
+    "    stats_file_name=file_name,\n",
+    "    n_fold=n_fold, logger=logger, n_bars=n_bars\n",
+    ")\n",
+    "\n",
+    "# filtering the strategies based on the limiting test\n",
+    "filter_strategies.filter_save_strategies(strategy_file_path, logger, \n",
+    "    stats_path=stats_path, stats_file_name=file_name, str_path=str_path, \n",
+    "    str_file_name=file_name, entry_testing_threshold=60,\n",
+    "    exit_testing_threshold=60, core_testing_threshold=70,\n",
+    "    prob_threshold=prob_threshold, is_counter_trend_exit=False, is_random_exit=False\n",
+    ")\n",
+    "\n",
+    "# filtering the strategies based on the limiting test and out of sample data (all folds except n_fold)\n",
+    "portfolio_testing.filter_save_lstr(data_path, n_fold=n_fold, str_file_path=selected_str_file_path, logger=logger,\n",
+    "    lstr_path=lstr_path, lstr_file_name=lstr_file_name, is_subset=False, start_subset=256, end_subset=260,\n",
+    "    entry_testing_threshold=60, exit_testing_threshold=60, core_testing_threshold=70,\n",
     "    prob_threshold=prob_threshold, n_bars=n_bars, n_total_folds=n_total_folds, is_counter_trend_exit=False, \n",
     "    is_random_exit=False, entry_exit_on=False\n",
     ")\n",
