--- a/test.ipynb
+++ b/test.ipynb
@@ -21404,7 +21404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -21449,7 +21449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21483,55 +21483,31 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>2023-11-01 18:00:00</td>\n",
-       "      <td>2023-12-06 17:00:00</td>\n",
+       "      <td>2024-01-10 17:30:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>2023-12-06 18:00:00</td>\n",
-       "      <td>2024-01-10 17:00:00</td>\n",
+       "      <td>2024-01-10 18:00:00</td>\n",
+       "      <td>2024-03-20 17:30:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>2024-01-10 18:00:00</td>\n",
-       "      <td>2024-02-14 17:00:00</td>\n",
+       "      <td>2024-03-20 18:00:00</td>\n",
+       "      <td>2024-05-29 17:30:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>2024-02-14 18:00:00</td>\n",
-       "      <td>2024-03-20 17:00:00</td>\n",
+       "      <td>2024-05-29 18:00:00</td>\n",
+       "      <td>2024-08-07 17:30:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>2024-03-20 18:00:00</td>\n",
-       "      <td>2024-04-24 17:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>2024-04-24 18:00:00</td>\n",
-       "      <td>2024-05-29 17:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>2024-05-29 18:00:00</td>\n",
-       "      <td>2024-07-03 17:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>2024-07-03 18:00:00</td>\n",
-       "      <td>2024-08-07 17:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
        "      <td>2024-08-07 18:00:00</td>\n",
-       "      <td>2024-09-11 17:00:00</td>\n",
+       "      <td>2024-09-14 11:30:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -21539,18 +21515,14 @@
       ],
       "text/plain": [
        "   fold                start                  end\n",
-       "0     1  2023-11-01 18:00:00  2023-12-06 17:00:00\n",
-       "1     2  2023-12-06 18:00:00  2024-01-10 17:00:00\n",
-       "2     3  2024-01-10 18:00:00  2024-02-14 17:00:00\n",
-       "3     4  2024-02-14 18:00:00  2024-03-20 17:00:00\n",
-       "4     5  2024-03-20 18:00:00  2024-04-24 17:00:00\n",
-       "5     6  2024-04-24 18:00:00  2024-05-29 17:00:00\n",
-       "6     7  2024-05-29 18:00:00  2024-07-03 17:00:00\n",
-       "7     8  2024-07-03 18:00:00  2024-08-07 17:00:00\n",
-       "8     9  2024-08-07 18:00:00  2024-09-11 17:00:00"
+       "0     1  2023-11-01 18:00:00  2024-01-10 17:30:00\n",
+       "1     2  2024-01-10 18:00:00  2024-03-20 17:30:00\n",
+       "2     3  2024-03-20 18:00:00  2024-05-29 17:30:00\n",
+       "3     4  2024-05-29 18:00:00  2024-08-07 17:30:00\n",
+       "4     5  2024-08-07 18:00:00  2024-09-14 11:30:00"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21561,7 +21533,7 @@
     "from collections import defaultdict\n",
     "import pandas as pd\n",
     "\n",
-    "data_path = Path(r\"C:/\\Users/\\vchar/\\OneDrive/\\Desktop/\\ML Projects/\\Upwork/\\AlgoT_ML_Dev/\\GrammarEvolution/\\PonyGE2/\\data_folds_60min\")\n",
+    "data_path = Path(r\"C:/\\Users/\\vchar/\\OneDrive/\\Desktop/\\ML Projects/\\Upwork/\\AlgoT_ML_Dev/\\GrammarEvolution/\\PonyGE2/\\data_folds2_30min\")\n",
     "\n",
     "files_list = os.listdir(data_path)\n",
     "files_list = [file for file in files_list if file!='test_data.csv']\n",
@@ -22301,70 +22273,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "3939it [07:52,  8.34it/s]\n",
-      "175it [04:04,  1.40s/it]\n",
-      "21it [00:02,  7.35it/s]\n",
-      "21it [00:03,  6.93it/s]\n",
-      "21it [00:02,  7.57it/s]\n",
-      "21it [00:02,  7.56it/s]\n",
-      "21it [00:02,  7.74it/s]\n",
-      "21it [00:02,  7.55it/s]\n",
-      "21it [00:02,  7.37it/s]\n",
-      "21it [00:02,  7.47it/s]\n",
-      "21it [00:02,  7.67it/s]\n",
-      "21it [00:02,  7.79it/s]\n",
-      "21it [00:01, 14.90it/s]\n",
-      "21it [00:01, 16.61it/s]\n",
-      "21it [00:01, 15.63it/s]\n",
-      "21it [00:01, 15.02it/s]\n",
-      "21it [00:01, 14.67it/s]\n",
-      "21it [00:02,  7.33it/s]\n",
-      "21it [00:02,  7.57it/s]\n",
-      "21it [00:02,  7.63it/s]\n",
-      "21it [00:02,  7.74it/s]\n",
-      "21it [00:02,  7.47it/s]\n",
-      "21it [00:01, 15.85it/s]\n",
-      "21it [00:01, 20.85it/s]\n",
-      "21it [00:01, 19.96it/s]\n",
-      "21it [00:01, 18.75it/s]\n",
-      "21it [00:01, 18.46it/s]\n",
-      "21it [00:02,  9.38it/s]\n",
-      "21it [00:02,  9.23it/s]\n",
-      "21it [00:02,  9.89it/s]\n",
-      "21it [00:02, 10.08it/s]\n",
-      "21it [00:02, 10.14it/s]\n",
-      "21it [00:01, 19.64it/s]\n",
-      "21it [00:00, 21.09it/s]\n",
-      "21it [00:01, 15.06it/s]\n",
-      "21it [00:01, 18.94it/s]\n",
-      "21it [00:01, 19.55it/s]\n",
-      "21it [00:02,  9.97it/s]\n",
-      "21it [00:02,  9.40it/s]\n",
-      "21it [00:01, 10.71it/s]\n",
-      "21it [00:01, 10.83it/s]\n",
-      "21it [00:01, 10.70it/s]\n",
-      "21it [00:00, 22.67it/s]\n",
-      "21it [00:00, 22.32it/s]\n",
-      "21it [00:00, 21.63it/s]\n",
-      "21it [00:00, 22.19it/s]\n",
-      "21it [00:00, 22.31it/s]\n",
-      "21it [00:01, 10.92it/s]\n",
-      "21it [00:02,  8.50it/s]\n",
-      "21it [00:02,  8.28it/s]\n",
-      "21it [00:02,  8.04it/s]\n",
-      "21it [00:02,  9.12it/s]\n",
-      "21it [00:01, 10.66it/s]\n",
-      "21it [00:02, 10.48it/s]\n",
-      "21it [00:01, 11.05it/s]\n",
-      "21it [00:02, 10.05it/s]\n",
-      "21it [00:02, 10.42it/s]\n"
+      "3134it [14:09,  3.69it/s]\n",
+      "141it [04:44,  2.01s/it]\n",
+      "17it [00:03,  4.77it/s]\n",
+      "17it [00:03,  4.86it/s]\n",
+      "17it [00:03,  4.79it/s]\n",
+      "17it [00:03,  4.63it/s]\n",
+      "17it [00:03,  4.54it/s]\n",
+      "17it [00:03,  4.72it/s]\n",
+      "17it [00:03,  4.75it/s]\n",
+      "17it [00:03,  4.60it/s]\n",
+      "17it [00:03,  4.66it/s]\n",
+      "17it [00:03,  4.72it/s]\n",
+      "17it [00:02,  6.04it/s]\n",
+      "17it [00:01,  9.46it/s]\n",
+      "17it [00:01,  9.52it/s]\n",
+      "17it [00:02,  7.00it/s]\n",
+      "17it [00:02,  8.45it/s]\n",
+      "17it [00:03,  4.86it/s]\n",
+      "17it [00:03,  4.92it/s]\n",
+      "17it [00:03,  4.80it/s]\n",
+      "17it [00:03,  4.73it/s]\n",
+      "17it [00:03,  5.01it/s]\n",
+      "17it [00:01, 10.05it/s]\n",
+      "17it [00:01,  9.81it/s]\n",
+      "17it [00:01,  9.32it/s]\n",
+      "17it [00:01,  9.21it/s]\n",
+      "17it [00:01,  9.34it/s]\n",
+      "17it [00:03,  4.65it/s]\n",
+      "17it [00:03,  4.73it/s]\n",
+      "17it [00:03,  4.99it/s]\n",
+      "17it [00:03,  4.95it/s]\n",
+      "17it [00:03,  4.79it/s]\n",
+      "17it [00:01,  9.00it/s]\n",
+      "17it [00:01,  8.94it/s]\n",
+      "17it [00:01,  9.06it/s]\n",
+      "17it [00:01,  9.09it/s]\n",
+      "17it [00:01,  9.22it/s]\n",
+      "17it [00:03,  4.63it/s]\n",
+      "17it [00:03,  4.78it/s]\n",
+      "17it [00:03,  4.73it/s]\n",
+      "17it [00:03,  4.63it/s]\n",
+      "17it [00:03,  4.65it/s]\n",
+      "17it [00:01,  9.63it/s]\n",
+      "17it [00:01,  9.66it/s]\n",
+      "17it [00:01,  9.72it/s]\n",
+      "17it [00:01,  9.56it/s]\n",
+      "17it [00:01,  9.24it/s]\n",
+      "17it [00:03,  4.75it/s]\n",
+      "17it [00:03,  4.83it/s]\n",
+      "17it [00:03,  4.88it/s]\n",
+      "17it [00:03,  4.74it/s]\n",
+      "17it [00:03,  5.01it/s]\n",
+      "17it [00:03,  4.96it/s]\n",
+      "17it [00:03,  5.02it/s]\n",
+      "17it [00:03,  4.89it/s]\n",
+      "17it [00:03,  5.15it/s]\n",
+      "17it [00:03,  5.01it/s]\n"
      ]
     }
    ],
@@ -22512,7 +22484,7 @@
     "portfolio_testing.creating_port_weights_mvp(\n",
     "    lstr_path, data_path, port_path=port_path, port_file_name=file_name.replace('_baseline', ''),\n",
     "    is_min_variance_port=True, is_sharpe_port=False, is_sortino_port=False, prob_threshold=prob_threshold,\n",
-    "    n_bars=n_bars, n_total_folds=n_total_folds, freq_minutes=60)\n",
+    "    n_bars=n_bars, n_total_folds=n_total_folds, freq_minutes=time_freq)\n",
     "\n",
     "# calculating out of sample (some folds that are not touched during strategy derivation) performance of the portfolio derived above\n",
     "portfolio_testing.calculate_port_out_sample_perf(\n",
@@ -22600,70 +22572,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "250it [02:46,  1.50it/s]\n",
-      "107it [03:55,  2.20s/it]\n",
-      "107it [00:18,  5.86it/s]\n",
-      "107it [00:17,  6.00it/s]\n",
-      "107it [00:17,  6.02it/s]\n",
-      "107it [00:18,  5.76it/s]\n",
-      "107it [00:22,  4.80it/s]\n",
-      "107it [00:30,  3.50it/s]\n",
-      "107it [00:30,  3.52it/s]\n",
-      "107it [00:30,  3.52it/s]\n",
-      "107it [00:29,  3.58it/s]\n",
-      "107it [00:30,  3.50it/s]\n",
-      "107it [00:15,  6.97it/s]\n",
-      "107it [00:18,  5.78it/s]\n",
-      "107it [00:16,  6.36it/s]\n",
-      "107it [00:16,  6.36it/s]\n",
-      "107it [00:15,  6.74it/s]\n",
-      "107it [00:21,  4.92it/s]\n",
-      "107it [00:31,  3.41it/s]\n",
-      "107it [00:31,  3.40it/s]\n",
-      "107it [00:29,  3.58it/s]\n",
-      "107it [00:30,  3.47it/s]\n",
-      "107it [00:15,  6.98it/s]\n",
-      "107it [00:17,  5.96it/s]\n",
-      "107it [00:17,  6.14it/s]\n",
-      "107it [00:16,  6.38it/s]\n",
-      "107it [00:17,  6.29it/s]\n",
-      "107it [00:30,  3.56it/s]\n",
-      "107it [00:30,  3.49it/s]\n",
-      "107it [00:30,  3.55it/s]\n",
-      "107it [00:31,  3.44it/s]\n",
-      "107it [00:30,  3.51it/s]\n",
-      "107it [00:15,  6.84it/s]\n",
-      "107it [00:17,  6.06it/s]\n",
-      "107it [00:17,  5.96it/s]\n",
-      "107it [00:17,  6.18it/s]\n",
-      "107it [00:17,  5.98it/s]\n",
-      "107it [00:31,  3.42it/s]\n",
-      "107it [00:30,  3.49it/s]\n",
-      "107it [00:31,  3.40it/s]\n",
-      "107it [00:31,  3.43it/s]\n",
-      "107it [00:30,  3.54it/s]\n",
-      "107it [00:15,  7.01it/s]\n",
-      "107it [00:15,  6.77it/s]\n",
-      "107it [00:15,  6.98it/s]\n",
-      "107it [00:15,  6.73it/s]\n",
-      "107it [00:15,  7.06it/s]\n",
-      "107it [00:31,  3.38it/s]\n",
-      "107it [00:31,  3.41it/s]\n",
-      "107it [00:30,  3.49it/s]\n",
-      "107it [00:31,  3.37it/s]\n",
-      "107it [00:31,  3.42it/s]\n",
-      "107it [00:31,  3.44it/s]\n",
-      "107it [00:31,  3.40it/s]\n",
-      "107it [00:30,  3.46it/s]\n",
-      "107it [00:31,  3.43it/s]\n",
-      "107it [00:31,  3.44it/s]\n"
+      "55it [00:50,  1.09it/s]\n",
+      "45it [03:17,  4.38s/it]\n",
+      "45it [00:10,  4.39it/s]\n",
+      "45it [00:10,  4.46it/s]\n",
+      "45it [00:10,  4.46it/s]\n",
+      "45it [00:10,  4.22it/s]\n",
+      "45it [00:09,  4.62it/s]\n",
+      "45it [00:10,  4.17it/s]\n",
+      "45it [00:10,  4.24it/s]\n",
+      "45it [00:09,  4.69it/s]\n",
+      "45it [00:09,  4.64it/s]\n",
+      "45it [00:09,  4.89it/s]\n",
+      "45it [00:04,  9.35it/s]\n",
+      "45it [00:05,  8.02it/s]\n",
+      "45it [00:05,  7.62it/s]\n",
+      "45it [00:05,  8.71it/s]\n",
+      "45it [00:05,  7.66it/s]\n",
+      "45it [00:10,  4.44it/s]\n",
+      "45it [00:09,  4.55it/s]\n",
+      "45it [00:10,  4.19it/s]\n",
+      "45it [00:10,  4.39it/s]\n",
+      "45it [00:10,  4.19it/s]\n",
+      "45it [00:05,  8.57it/s]\n",
+      "45it [00:05,  8.44it/s]\n",
+      "45it [00:05,  7.52it/s]\n",
+      "45it [00:05,  8.77it/s]\n",
+      "45it [00:05,  7.71it/s]\n",
+      "45it [00:09,  4.51it/s]\n",
+      "45it [00:10,  4.49it/s]\n",
+      "45it [00:09,  4.67it/s]\n",
+      "45it [00:10,  4.48it/s]\n",
+      "45it [00:10,  4.35it/s]\n",
+      "45it [00:04,  9.17it/s]\n",
+      "45it [00:05,  7.60it/s]\n",
+      "45it [00:05,  8.61it/s]\n",
+      "45it [00:05,  7.84it/s]\n",
+      "45it [00:05,  8.05it/s]\n",
+      "45it [00:07,  5.96it/s]\n",
+      "45it [00:06,  6.60it/s]\n",
+      "45it [00:07,  6.37it/s]\n",
+      "45it [00:06,  6.48it/s]\n",
+      "45it [00:06,  6.47it/s]\n",
+      "45it [00:03, 13.50it/s]\n",
+      "45it [00:03, 13.06it/s]\n",
+      "45it [00:04,  9.43it/s]\n",
+      "45it [00:05,  8.34it/s]\n",
+      "45it [00:05,  8.73it/s]\n",
+      "45it [00:10,  4.34it/s]\n",
+      "45it [00:10,  4.32it/s]\n",
+      "45it [00:10,  4.42it/s]\n",
+      "45it [00:09,  4.58it/s]\n",
+      "45it [00:10,  4.41it/s]\n",
+      "45it [00:09,  4.50it/s]\n",
+      "45it [00:09,  4.60it/s]\n",
+      "45it [00:10,  4.41it/s]\n",
+      "45it [00:10,  4.41it/s]\n",
+      "45it [00:10,  4.47it/s]\n"
      ]
     }
    ],
@@ -22711,7 +22683,7 @@
     "\n",
     "# n_fold should be equal to the number of fold which has been used to derive the strategies\n",
     "# if there are no folds, just set it to 0\n",
-    "n_fold = 0\n",
+    "n_fold = 4\n",
     "\n",
     "# start_fold should be set to the number of fold starting from which the folds of data are not used during strategy generation\n",
     "# end_fold is the last fold not used for strategy generation\n",
@@ -22811,7 +22783,7 @@
     "portfolio_testing.creating_port_weights_mvp(\n",
     "    lstr_path, data_path, port_path=port_path, port_file_name=file_name.replace('_baseline', ''),\n",
     "    is_min_variance_port=True, is_sharpe_port=False, is_sortino_port=False, prob_threshold=prob_threshold,\n",
-    "    n_bars=n_bars, n_total_folds=n_total_folds, freq_minutes=60)\n",
+    "    n_bars=n_bars, n_total_folds=n_total_folds, freq_minutes=time_freq)\n",
     "\n",
     "# calculating out of sample (some folds that are not touched during strategy derivation) performance of the portfolio derived above\n",
     "portfolio_testing.calculate_port_out_sample_perf(\n",
